test: Fase 3 - pruebas para ms-coincidencias y ms-notificaciones